--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -222,35 +222,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9],\n",
-       "       [10, 11, 12, 13, 14, 15, 16, 17, 18, 19],\n",
-       "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29],\n",
-       "       [30, 31, 32, 33, 34, 35, 36, 37, 38, 39],\n",
-       "       [40, 41, 42, 43, 44, 45, 46, 47, 48, 49],\n",
-       "       [50, 51, 52, 53, 54, 55, 56, 57, 58, 59],\n",
-       "       [60, 61, 62, 63, 64, 65, 66, 67, 68, 69],\n",
-       "       [70, 71, 72, 73, 74, 75, 76, 77, 78, 79],\n",
-       "       [80, 81, 82, 83, 84, 85, 86, 87, 88, 89],\n",
-       "       [90, 91, 92, 93, 94, 95, 96, 97, 98, 99]])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "M2"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -452,12 +423,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Matrixc multiplication is @ now in python 3.7"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = x@a + np.random.uniform(-1,1, n)"
+    "y = x @ a + np.random.uniform(-1,1, n)"
    ]
   },
   {
@@ -574,18 +552,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 156,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Create a linear regressor\n",
-    "regr = linear_model.LinearRegression()"
+    "Create a linear regressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regr = linear_model.LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit the model to the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +586,7 @@
        "         normalize=False)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +596,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check the model params"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +613,7 @@
        "(array([3.26243712, 0.        ]), 2.0269864397879926)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,8 +632,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some standard mesures of error"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -2469,6 +2474,202 @@
    ],
    "source": [
     "res['10-01-2017'].plot(figsize=(10,4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: Make a Random Forest regressor for the california DataFrame to predict housing value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-114.31</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5612.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>1015.0</td>\n",
+       "      <td>472.0</td>\n",
+       "      <td>1.4936</td>\n",
+       "      <td>66900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-114.47</td>\n",
+       "      <td>34.40</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>7650.0</td>\n",
+       "      <td>1901.0</td>\n",
+       "      <td>1129.0</td>\n",
+       "      <td>463.0</td>\n",
+       "      <td>1.8200</td>\n",
+       "      <td>80100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-114.56</td>\n",
+       "      <td>33.69</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>720.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>333.0</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>1.6509</td>\n",
+       "      <td>85700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-114.57</td>\n",
+       "      <td>33.64</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1501.0</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>515.0</td>\n",
+       "      <td>226.0</td>\n",
+       "      <td>3.1917</td>\n",
+       "      <td>73400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-114.57</td>\n",
+       "      <td>33.57</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1454.0</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>624.0</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>1.9250</td>\n",
+       "      <td>65500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0    -114.31     34.19                15.0       5612.0          1283.0   \n",
+       "1    -114.47     34.40                19.0       7650.0          1901.0   \n",
+       "2    -114.56     33.69                17.0        720.0           174.0   \n",
+       "3    -114.57     33.64                14.0       1501.0           337.0   \n",
+       "4    -114.57     33.57                20.0       1454.0           326.0   \n",
+       "\n",
+       "   population  households  median_income  median_house_value  \n",
+       "0      1015.0       472.0         1.4936             66900.0  \n",
+       "1      1129.0       463.0         1.8200             80100.0  \n",
+       "2       333.0       117.0         1.6509             85700.0  \n",
+       "3       515.0       226.0         3.1917             73400.0  \n",
+       "4       624.0       262.0         1.9250             65500.0  "
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "california_housing_dataframe.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17000"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(california_housing_dataframe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cal_train = california_housing_dataframe.iloc[0:-1000].drop(columns='median_house_value')\n",
+    "y_cal_train = california_housing_dataframe.iloc[0:-1000].median_house_value\n",
+    "\n",
+    "cal_val = california_housing_dataframe.iloc[-1000:-1].drop(columns='median_house_value')\n",
+    "y_cal_val = california_housing_dataframe.iloc[-1000:-1].median_house_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9759575116939719, 0.7977433805742276)"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cal_rf = RandomForestRegressor(n_estimators=100)\n",
+    "cal_rf.fit(cal_train, y_cal_train)\n",
+    "cal_rf.score(cal_train, y_cal_train), cal_rf.score(cal_val, y_cal_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To learn more about Random Forest, check the ML course in fast.ai"
    ]
   },
   {
