--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -2631,38 +2631,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 312,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cal_train = california_housing_dataframe.iloc[0:-1000].drop(columns='median_house_value')\n",
-    "y_cal_train = california_housing_dataframe.iloc[0:-1000].median_house_value\n",
-    "\n",
-    "cal_val = california_housing_dataframe.iloc[-1000:-1].drop(columns='median_house_value')\n",
-    "y_cal_val = california_housing_dataframe.iloc[-1000:-1].median_house_value"
+    "sklearn has a function to split randomly the train/valid/test data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = california_housing_dataframe.drop(columns='median_house_value')\n",
+    "y = california_housing_dataframe.median_house_value\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9759575116939719, 0.7977433805742276)"
+       "(0.9748326288526589, 0.8164129671972687)"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cal_rf = RandomForestRegressor(n_estimators=100)\n",
-    "cal_rf.fit(cal_train, y_cal_train)\n",
-    "cal_rf.score(cal_train, y_cal_train), cal_rf.score(cal_val, y_cal_val)"
+    "cal_rf.fit(X_train, y_train)\n",
+    "cal_rf.score(X_train, y_train), cal_rf.score(X_test, y_test)"
    ]
   },
   {
@@ -2671,13 +2685,6 @@
    "source": [
     "To learn more about Random Forest, check the ML course in fast.ai"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
