--- a/Deep_Learning_in_GPU.ipynb
+++ b/Deep_Learning_in_GPU.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [
+        "FR-7hwdglkj6",
         "xmZRKK7XnVYp",
         "Hbzbdu3yn7dp"
       ],
@@ -185,19 +186,6 @@
           }
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "L1aHXTjpl8UN",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "california_housing_dataframe['latitude2']=pd.cut(california_housing_dataframe.latitude, bins=[30,33,35,37,39,41,43])"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "metadata": {
